Also run unit tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ services:
 
 install: "pip install -r requirements.txt"
 
-script: behave tests/features
-
+script:
+  - behave tests/features
+  - PYTHONPATH=scripts python -m unittest discover tests
 
